@@ -1,32 +1,18 @@
-/*
-** -----------------------------------------------------------------------
-** Nom           : cx/ath/choisnet/util/benchs/BenchFuncsStatic.java
-** Description   :
-**
-**  3.02.039 2006.08.11 Claude CHOISNET - Version initiale
-** -----------------------------------------------------------------------
-**
-** cx.ath.choisnet.benchs.BenchFuncsStatic
-**
-*/
-package cx.ath.choisnet.benchs;
+package com.googlecode.cchlib.sandbox.benchs;
 
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.TreeSet;
 import java.util.Vector;
+import com.googlecode.cchlib.sandbox.benchs.tools.Stats;
 
-/*
-** <p>
-** .java cx.ath.choisnet.benchs.BenchFuncsStatic
-** </p>
-**
-**
-** @author  Claude CHOISNET
-** @version 3.02.039
-**
-*/
+/**
+ * Small benchmark for 'static' qualifier.
+ *
+ * @since 3.02
+ */
+@SuppressWarnings({"squid:S106"})
 public class BenchFuncsStatic
 {
     private static final int BENCH_COUNT    = 10;
@@ -39,7 +25,7 @@ public class BenchFuncsStatic
         // App
     }
 
-    private static final <T> void appendS( // ----------------------------------
+    private static final <T> void appendStatic(
         final Collection<T> list,
         final T             item
         )
@@ -47,7 +33,7 @@ public class BenchFuncsStatic
         list.add( item );
     }
 
-    private final <T> void append0( // -----------------------------------------
+    private final <T> void appendNonStatic(
         final Collection<T> list,
         final T             item
         )
@@ -55,7 +41,7 @@ public class BenchFuncsStatic
         list.add( item );
     }
 
-    private static final <T> void benchS( // -----------------------------------
+    private static final <T> void benchStatic(
         final Collection<T> list,
         final T             item,
         final String        label
@@ -64,7 +50,7 @@ public class BenchFuncsStatic
         final long begin = System.nanoTime();
 
         for( int i = 0; i < COMPUTE_COUNT; i++ ) {
-            appendS( list, item );
+            appendStatic( list, item );
         }
 
         final long end   = System.nanoTime();
@@ -73,7 +59,7 @@ public class BenchFuncsStatic
         stats.get( label + ".appendS() : static call" ).addDelay( delay );
     }
 
-    private final <T> void bench0( // ------------------------------------------
+    private final <T> void benchNonStatic(
         final Collection<T> list,
         final T             item,
         final String        label
@@ -82,7 +68,7 @@ public class BenchFuncsStatic
         final long begin = System.nanoTime();
 
         for( int i = 0; i < COMPUTE_COUNT; i++ ) {
-            append0( list, item );
+            appendNonStatic( list, item );
         }
 
         final long end   = System.nanoTime();
@@ -102,7 +88,7 @@ public class BenchFuncsStatic
         final File     item1    = new File( "." );
         final String   label1   = "ArrayList<File>()";
 
-        final Long     item2   = new Long( -1 );
+        final Long     item2   = Long.valueOf( -1 );
         final String   label2  = "TreeSet<Long>()";
 
         final String   item3   = "String";
@@ -111,18 +97,18 @@ public class BenchFuncsStatic
         final BenchFuncsStatic instance = new BenchFuncsStatic();
 
         for( int i = 0; i<BENCH_COUNT; i++ ) {
-            benchS( new ArrayList<>(), item1, label1 );
+            benchStatic( new ArrayList<>(), item1, label1 );
             printDot();
-            benchS( new Vector<>()   , item3, label3 );
+            benchStatic( new Vector<>()   , item3, label3 );
             printDot();
-            benchS( new TreeSet<>()  , item2, label2 );
+            benchStatic( new TreeSet<>()  , item2, label2 );
             printDot();
 
-            instance.bench0( new ArrayList<>(), item1, label1 );
+            instance.benchNonStatic( new ArrayList<>(), item1, label1 );
             printDot();
-            instance.bench0( new Vector<>()   , item3, label3 );
+            instance.benchNonStatic( new Vector<>()   , item3, label3 );
             printDot();
-            instance.bench0( new TreeSet<>()  , item2, label2 );
+            instance.benchNonStatic( new TreeSet<>()  , item2, label2 );
             printDot();
 
             System.out.println( " " + i + "/" + BENCH_COUNT );
